--- a/finiteelement/Cargo.toml
+++ b/finiteelement/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 name = "finiteelement"
 
 [dependencies]
-rand = "*"
+rand = "0.7.0"
 num-traits = "0.2.8"
-finiteelement_macros = { path = "../finiteelement_macros" }
+finiteelement_macros = "0.1.0"
 serde = { version = "1.0", features = ["derive"] }
